--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,7 +97,7 @@ r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
-r.ForwardShading=False
+r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.SeparateTranslucency=True
 r.TranslucentSortPolicy=0
@@ -107,7 +107,7 @@ xr.VRS.DynamicFoveation=False
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=True
+r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
