--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 ProjectID=52F8B1D8478E054D64BC1BBD69367217
 ProjectName=Top Down BP Game Template
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
